# GsyFluid

./: README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/block_algorithm/: CMakeLists.txt  block_algorithm.hpp
src/core/collision/: CMakeLists.txt  srt_collision.hpp
src/core/simulator/: CMakeLists.txt
src/core/simulator/D3Q27BlockDDFSimulator/: CMakeLists.txt  D3Q27BlockDDFSimulator.cu  D3Q27BlockDDFSimulator.cuh
src/core/simulator/D3Q27DoubleDDFSimulator/: CMakeLists.txt  D3Q27DoubleDDFSimulator.cu  D3Q27DoubleDDFSimulator.cuh
src/core/simulator/D3Q27SingleDDFSimulator/: CMakeLists.txt  D3Q27SingleDDFSimulator.cu  D3Q27SingleDDFSimulator.cuh
src/core/simulator_component/: CMakeLists.txt  block_ddf_buf_data.cuh  block_ddf_buf_impl.hpp  density_buf_data.cuh  density_buf_impl.hpp  double_ddf_buf_data.cuh  double_ddf_buf_impl.hpp  flag_buf_data.cuh  flag_buf_impl.hpp  single_ddf_buf_data.cuh  single_ddf_buf_impl.hpp  velocity_buf_data.cuh  velocity_buf_impl.hpp
src/core/velocity_set/: CMakeLists.txt  velocity_set.hpp
src/example/: CMakeLists.txt
src/example/D3Q27BlockDDFSimulator/: CMakeLists.txt  main.cu
src/example/D3Q27DoubleDDFSimulator/: CMakeLists.txt  main.cu
src/example/D3Q27SingleDDFSimulator/: CMakeLists.txt  main.cu
src/example/cu_runtime_error/: CMakeLists.txt  invalid_free.cu  invalid_free.hpp  main.cpp
src/example/srt_test/: CMakeLists.txt  main.cu
src/utils/: CMakeLists.txt
src/utils/cu_check/: CMakeLists.txt  cu_check.cu  cu_check.cuh
src/utils/cu_memory/: CMakeLists.txt  cu_memory.cuh
src/utils/cu_precompile_header/: CMakeLists.txt  stdafx.cuh
src/utils/cxx_precompile_header/: CMakeLists.txt  stdafx.hpp
src/utils/math/: CMakeLists.txt  math.hpp
src/vis/: cubicVis.ipynb
